[package]
name = "mzsvg"
version = "0.3.0"
edition = "2021"

keywords = [
    'mass-spectrometry',
    'svg'
]

categories = [
    "science::bioinformatics",
    "visualization"
]

description = "A library to draw mass spectra"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzsvg"
documentation = "https://docs.rs/mzsvg"


[lib]

[features]

png = ["resvg", "fontdb"]
pdf = ["svg2pdf", "fontdb"]

[dependencies]
mzdata = { version = ">= 0.39.0", features = ["mzsignal", "nalgebra"]}
mzpeaks = ">=0.23.0"
num-traits = ">=0.2"
resvg = { version = "0.42.0", optional = true, features = ["text", "system-fonts", "memmap-fonts"] }
svg2pdf = { version = "0.11.0", optional = true }
fontdb = { version = "0.18.0", optional = true }
svg = "0.18.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }